--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ if (imageSrc && !imageAlt) {
 		place-content: center;
 		text-align: center;
 		padding: 60px;
-		color: var(--color-text-inverse);
+		color: var(--white);
 		grid-column: 1 / -1;
 		height: 45vh;
 
@@ -25,7 +25,7 @@ if (imageSrc && !imageAlt) {
 			content: '';
 			position: absolute;
 			inset: 0;
-			background-color: var(--color-canvas-quaternary);
+			background-color: var(--theme-lighteralt);
 			z-index: -2;
 		}
 	}
@@ -37,7 +37,7 @@ if (imageSrc && !imageAlt) {
 		width: 100%;
 		object-fit: cover;
 		object-position: center;
-		opacity: 0.7;
+		opacity: 0.4;
 		z-index: -1;
 	}
 </style>
