Update Picture references

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -51,7 +51,7 @@ if (imageSrc && !imageAlt) {
 				class='background'
 				src={imageSrc}
 				alt={imageAlt}
-				formats={['webp', 'avif', 'jpeg']}
+				formats={['webp', 'avif', 'jpg']}
 				widths={[240, 540, 720, imageSrc.width]}
 				sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${imageSrc.width}px`}
 				loading='eager'
