--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -37,7 +37,7 @@ const datePretty = new Date(entry.data.pubDate).toLocaleDateString('en-US', {
 			alt={entry.data.imageAlt}
 			width='600'
 			widths={[600]}
-			formats={['avig', 'webp', 'jpeg']}
+			formats={['avif', 'webp', 'jpg']}
 		/>
 	</Section>
 	<Section>
