Update homepage hero button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,16 +19,9 @@ import HeroImage from '../assets/demo-hero.png'
 	<Hero imageSrc={HeroImage} imageAlt='A bar counter with various drinks'>
 		<h1>Looking for Cocktail Recipes? Ask Tipsy!</h1>
 		<p>
-			<Button
-				text='New'
-				href='/categories/new/'
-				icon='fa-solid fa-martini-glass-citrus'
-			/>
-			<Button
-				text='Springtime Drinks'
-				href='/categories/spring/'
-				icon='fa-solid fa-seedling'
-			/>
+			<Button href='/categories/' icon='fa-solid fa-arrow-right'
+				>View all categories</Button
+			>
 		</p>
 	</Hero>
 	<Section id='hero'>
