Add hero image to all pages

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ if (imageSrc && !imageAlt) {
 		padding: 60px;
 		color: var(--white);
 		grid-column: 1 / -1;
-		height: 45vh;
+		min-height: 45vh;
 
 		&::after {
 			content: '';
