--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,6 +19,7 @@ const year = new Date().getFullYear()
 	<a class='font-heading logo' href='/'>AskTipsy</a>
 	<nav>
 		<a href='/recipes'>Recipes</a>
+		<a href='/search'>Search</a>
 		<a href='/posts'>Posts</a>
 	</nav>
 	<div class='copywrite'>
