--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,10 @@
 	<a class='font-heading logo swing-in-left-bck' href='/'>AskTipsy</a>
 	<nav>
 		<a class='font-subheading' href='/recipes/'>Recipes</a>
+		<a href='/search'>
+			<i class='fa-solid fa-magnifying-glass'></i>
+			<span class='screen-reader-only'>Search</span>
+		</a>
 	</nav>
 </header>
 
