--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,3 +14,5 @@ import { ViewTransitions } from 'astro:transitions'
 	<meta name='description' content='This is my website description.' />
 	<ViewTransitions />
 </head>
+
+<a href='#content' class='skip-link'> Skip to content </a>
