--- a/src/pages/recipes/[...slug].astro
+++ b/src/pages/recipes/[...slug].astro
@@ -56,6 +56,7 @@ const datePretty = new Date(entry.data.pubDate).toLocaleDateString('en-US', {
 				text-align: right;
 				font-size: var(--font-size-small);
 				font-weight: 700;
+				padding-inline-start: 1ch;
 			}
 		}
 
@@ -72,9 +73,7 @@ const datePretty = new Date(entry.data.pubDate).toLocaleDateString('en-US', {
 
 <PrimaryLayout frontmatter={entry.data}>
 	<Hero imageSrc={entry.data.image} imageAlt={entry.data.imageAlt}>
-		<p class='h1'>
-			{entry.data.title}
-		</p>
+		<h1>{entry.data.title}</h1>
 		<p>{entry.data.description}</p>
 	</Hero>
 	<Section id='recipe-navigation'>
