--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -3,7 +3,7 @@ import BackgroundSpill from '../../components/svg/background-spill.astro'
 import Button from '../../components/Button.astro'
 import CardSlider from '../../components/CardSlider.astro'
 import Hero from '../../components/Hero.astro'
-import HeroImage from '../../assets/demo-hero.png'
+import HeroImage from '../../assets/recipes.jpg'
 import PrimaryLayout from '../../layouts/PrimaryLayout.astro'
 import RecipeTags from '../../components/RecipeTags.astro'
 import Section from '../../components/Section.astro'
@@ -19,7 +19,10 @@ categories = categories.filter((category) => category.slug !== 'new')
 ---
 
 <PrimaryLayout>
-	<Hero imageSrc={HeroImage} imageAlt='A bar counter with various drinks'>
+	<Hero
+		imageSrc={HeroImage}
+		imageAlt='A bar counter with various drinks and ingredients floating around'
+	>
 		<h1>All Recipes</h1>
 		<p>
 			Discover delicious cocktail recipes that will elevate any occasion.
